--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ ENV = 'production'
 
 VUE_APP_TYPE = 'build'
 
-VUE_APP_BASE_API = 'https://www.lyh.red'
+VUE_APP_BASE_API = 'https://mina.baobeihuijia.com/apis/bbs'
