--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "driver.js": "~0.6.1",
     "echarts": "~4.1.0",
     "element-ui": "~2.4.3",
     "js-cookie": "~2.2.0",
+    "marked": "~0.6.2",
+    "mavon-editor": "~2.6.17",
+    "mqtt": "^2.18.8",
     "node-sass": "~4.9.1",
-    "sass-loader": "~7.0.3",
     "normalize.css": "~8.0.0",
     "nprogress": "~0.2.0",
+    "sass-loader": "~7.0.3",
     "vue": "~2.6.10",
     "vue-count-to": "~1.0.13",
-    "vue-router": "~3.0.1",
-    "vuex": "~3.0.1",
-    "mavon-editor": "~2.6.17",
-    "marked": "~0.6.2",
     "vue-i18n": "7.3.2",
-    "mqtt": "^2.18.8"
+    "vue-router": "~3.0.1",
+    "vuex": "~3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
